src/test/ui/parser/issue-58094-missing-right-square-bracket.stderr
error: this file contains an un-closed delimiter
  --> $DIR/issue-58094-missing-right-square-bracket.rs:4:4
   |
LL | #[Ѕ
   |  - ^
   |  |
   |  un-closed delimiter

error: expected item after attributes
  --> $DIR/issue-58094-missing-right-square-bracket.rs:4:4
   |
LL | #[Ѕ
   |    ^

error: aborting due to 2 previous errors

